--- a/css/styles.css
+++ b/css/styles.css
@@ -125,8 +125,8 @@ main #calculator #calc-display #calc-communicator {
 main #calculator #calc-display hr {
     border-radius: 50%;
     border-top: 2px solid #cccccc;
+    margin-block: 0; /* reset default style */
     margin-inline: auto;
-    margin: 0;
     width: 88%;
 } 
 
