--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,6 @@ main #calculator .calc-btn {
 
 main #calculator .calc-btn:disabled {
     border: 3px dotted gray;
-
     background-color: silver;
     box-shadow: none;
     cursor: default;
@@ -193,7 +192,7 @@ main #calculator #calc-clear-btn {
 
 main #calculator #calc-clear-btn > picture {
     pointer-events: none;
-    transition: 3s ease-in;
+    transition: 3.33s ease-in-out;
 }
 
 main #calculator #calc-equals-btn {
