--- a/css/styles.css
+++ b/css/styles.css
@@ -40,8 +40,7 @@
 body {
     background-color: #CFF9FF;
     color: #FFFCE8;
-    font-family: 'Space Mono';
-
+    font-family: 'Space Mono', monospace;
 }
 
 main {
